--- a/проеткы.html
+++ b/проеткы.html
@@ -28,8 +28,8 @@
                                 <div>
                                   <ul>
                                     <li><a href="index.html" class="hvr-underline-from-center ">Главная</a></li>
-                                    <li><a href="о-нас.html" class="hvr-underline-from-center active">О нас</a></li>
-                                    <li><a href="проеткы.html" class="hvr-underline-from-center">Проекты</a></li>
+                                    <li><a href="о-нас.html" class="hvr-underline-from-center">О нас</a></li>
+                                    <li><a href="проеткы.html" class="hvr-underline-from-center active">Проекты</a></li>
                                     <li><a href="контакты.html" class="hvr-underline-from-center">Контакты</a></li>
                                   </ul>
                                 </div>
